--- a/frontend/public/locales/nb/eventListPage.json
+++ b/frontend/public/locales/nb/eventListPage.json
@@ -4,6 +4,6 @@
   "filter": {
     "title": "filter",
     "searchHint": "Søk...",
-    "resetButton": "Nullstill filter"
+    "resetButton": "Nullstill"
   }
 }
