--- a/frontend/public/locales/en/aboutPage.json
+++ b/frontend/public/locales/en/aboutPage.json
@@ -42,22 +42,22 @@
     "eventkom": {
       "title": "<i class='logfont-eventkom'></i> EventKom",
       "intro": "EventKom is Login's party committee, where the goal is to use up all the income PR provides.",
-      "body": "EventKom is responsible for setting up social events on behalf of Login throughout the semester. We offer gatherings where students can meet across study programmes, years and classes in order to have a break from everyday study life. The aim of EventKom is to build a strong community among the IT students at the school, which you can lean on when the study life gets busy. If you have suggestions for activities, or want to join the committee, just contact us on <a href=\"https://discord.gg/login-ntnu\\\" target=\"_blank\" rel=\"noreferrer\"> Discord</a>. Suggestions and feedback are welcomed, and we hope to hear from you."
+      "body": "EventKom is responsible for setting up social events on behalf of Login throughout the semester. We offer gatherings where students can meet across study programmes, years and classes in order to have a break from everyday study life. The aim of EventKom is to build a strong community among the IT students at the school, which you can lean on when the study life gets busy. If you have suggestions for activities, or want to join the committee, just contact us on <a class='standard-link standard-link--underscore-hover' href=\"https://discord.gg/login-ntnu\\\" target=\"_blank\" rel=\"noreferrer\"> Discord</a>. Suggestions and feedback are welcomed, and we hope to hear from you."
     },
     "tekkom": {
       "title": "<i class='logfont-tekkom'></i> TekKom",
       "intro": "TekKom claims that they work on this website, but they mainly eat pizza. This is the committee for those who like to learn technical things such as programming and operating high-tech infrastructure.",
-      "body": "TekKom is responsible for Login's infrastructure. Our tasks involve development and maintenance of, among other things, the websites and services the association depends on, in addition to other side projects."
+      "body": "TekKom is responsible for Login's infrastructure. Our tasks involve development and maintenance of, among other things, the websites and services the association depends on, in addition to other side projects. We organize open work evenings with pizza every week where we work on TekKom projects. Here we set no expectations other than that you are curious and try to contribute what you can. If you enjoy coding, or just have a wild project in mind, this is the committee for you!"
     },
     "pr": {
       "title": "<i class='logfont-pr'></i> PR",
       "intro": "PR is Login's golden calf and without them the money wouldn't have flowed in and none of the other committees could do the trick!",
-      "body": "PR is Login's external face and is responsible for Login's social media channels. PR monitors our ticket system and responds to company contacts. They also work to give students an insight and way into the business world by arranging bed press, workshops/fag press and career days, which is also Login's main source of income! Furthermore, PR helps to represent Login at events and also assists with the recruitment of new members."
+      "body": "PR is Login's public face and is responsible for Login's social media channels. PR monitors our ticket system and responds to company contacts. They also work to give students a sneak peek into the business world, by arranging company presentations and a career fair called The Cyberdays each semester. Furthermore, PR helps to represent Login at events and also assists with the recruitment of new members."
     },
     "ctfkom": {
       "title": "<i class='logfont-ctf'></i> CTFkom",
       "intro": "CTFkom is Login's hacker committee. Their most important mission is to hack into ING:α's infrastructure and create havoc!",
-      "body": "CTFkom is the committee that organizes CTF events on campus. They work to ensure that all IT students at the school can develop their skills through Capture The Flag competitions. Every other week they gather at the school to solve tasks together and offer an arena where students from different study programmes, years and classes can meet and have fun together. In addition to this, we are active on Discord, and ensure that you can always stay up to date on new and interesting CTFs. In CTFkom, no question is too stupid and if you are stuck in a CTF, or just wondering about something, just send a message in the channel on <a href=\"https://discord.gg/login-ntnu\\\" target=\"_blank\" rel=\"noreferrer\"> Discord</a>."
+      "body": "CTFkom is the committee that organizes CTF events on campus. They work to ensure that all IT students at the school can develop their skills through Capture The Flag competitions. Every other week they gather at the school to solve tasks together and offer an arena where students from different study programmes, years and classes can meet and have fun together. In addition to this, we are active on Discord, and ensure that you can always stay up to date on new and interesting CTFs. In CTFkom, no question is too stupid and if you are stuck in a CTF, or just wondering about something, just send a message in the channel on <a class='standard-link standard-link--underscore-hover' href=\"https://discord.gg/login-ntnu\\\" target=\"_blank\" rel=\"noreferrer\"> Discord</a>."
     },
     "satkom":{
       "title": "<abbr title=\"Systematiserte Automatiser Transaksjoner\">SATkom</abbr>",
@@ -67,6 +67,6 @@
   },
   "publicDocs": {
     "title": "Public documents",
-    "body": "For more information and public documents, visit <a href='https://redmine.login.no/projects/wiki/wiki'>Redmine <i class='logfont-redmine'></i></a>."
+    "body": "For more information and public documents, visit <a class='standard-link standard-link--underscore-hover' href='https://redmine.login.no/projects/wiki/wiki'>Redmine <i class='logfont-redmine'></i></a>."
   }
 }
