--- a/frontend/public/locales/nb/notfound.json
+++ b/frontend/public/locales/nb/notfound.json
@@ -1,4 +1,6 @@
 {
+  "header-1": "Her var det tomt ...",
+  "header-2": "Dette blir ikke fikset før TekKom har fått pizza!",
   "msg": "Denne siden finnes ikke...",
   "help": "Gå til forsiden"
 }
