--- a/public/locales/en/layout.json
+++ b/public/locales/en/layout.json
@@ -5,6 +5,7 @@
     "companies": "FOR COMPANIES"
   },
   "footer": {
+    "sponsor": "Main partner",
     "msg": "The website is in BETA. Changes occur continuously. This means that things do not always work as they should. Should you stumble upon an error, we would appreciate an <a href='mailto:kontakt@login.no'>email</a>",
     "copy": "Copyright &copy; 2022 Login - Linjeforeningen for IT, NO 811 940 372"
   }
