--- a/public/locales/nb/aboutPage.json
+++ b/public/locales/nb/aboutPage.json
@@ -67,6 +67,13 @@
   },
   "publicDocs": {
     "title": "Offentlige dokumenter",
-    "body": "For mer informasjon og offentlige dokumenter kan du besøke <a class='standard-link standard-link--underscore-hover' href='https://redmine.login.no/projects/wiki/wiki'>Redmine <i class='logfont-redmine'></i></a>."
+    "body": "For mer informasjon og offentlige dokumenter kan du besøke <a class='standard-link standard-link--underscore-hover' href='https://redmine.login.no/projects/wiki/wiki'>Redmine <i class='logfont-redmine'></i></a>, her kan du blant annet finne følgende type dokumenter:",
+    "bulletPoints": {
+      "agendas": "Agenda",
+      "minutes": "Referat",
+      "budgets": "Budsjett",
+      "honorary-member": "Æresmedlem",
+      "bylaws": "Vedtekter"
+    }
   }
 }
