--- a/public/locales/en/notfound.json
+++ b/public/locales/en/notfound.json
@@ -1,6 +1,5 @@
 {
-  "header-1": "It's empty here ...",
-  "header-2": "This will not be fixed until TekKom gets more pizza ...!",
-  "msg": "This site does not exist...",
+  "header-1": "It's empty here...",
+  "msg": "This site does not exist. This will not be fixed until TekKom gets more pizza...",
   "help": "Go to the homepage"
 }
