Revert "Merge branch 'v0.1.0-fix' into 'master'"

--- a/public/locales/nb/notfound.json
+++ b/public/locales/nb/notfound.json
@@ -1,5 +1,6 @@
 {
-  "header-1": "Her var det tomt...",
-  "msg": "Denne siden finnes ikke. Dette blir ikke fikset før TekKom har fått mer pizza...",
+  "header-1": "Her var det tomt ...",
+  "header-2": "Dette blir ikke fikset før TekKom har fått pizza!",
+  "msg": "Denne siden finnes ikke...",
   "help": "Gå til forsiden"
 }
