--- a/public/locales/en/notfound.json
+++ b/public/locales/en/notfound.json
@@ -1,5 +1,6 @@
 {
-  "header-1": "It's empty here...",
-  "msg": "This site does not exist. This will not be fixed until TekKom gets more pizza...",
+  "header-1": "It's empty here ...",
+  "header-2": "This will not be fixed until TekKom gets more pizza ...!",
+  "msg": "This site does not exist...",
   "help": "Go to the homepage"
 }
