--- a/public/locales/en/layout.json
+++ b/public/locales/en/layout.json
@@ -2,7 +2,8 @@
   "nav": {
     "about": "ABOUT US",
     "events": "EVENTS",
-    "companies": "FOR COMPANIES"
+    "companies": "FOR COMPANIES",
+    "verv": "VERV"
   },
   "footer": {
     "sponsor": "Main partner",
