--- a/public/locales/nb/eventPage.json
+++ b/public/locales/nb/eventPage.json
@@ -5,6 +5,19 @@
     "location": "Lokasjon",
     "type": "Kategori",
     "organizer": "Arrangør",
-    "links": "Lenker"
+    "links": "Lenker",
+    "form": {
+        "button": "Meld meg på",
+        "full": "Dette arrangementet er fullt!",
+        "send": "Send",
+        "sent": "Du er påmeldt.",
+        "cancel": "Meld meg av.",
+        "name": "Navn",
+        "degree": "Studieretning",
+        "study_year": "Studieår",
+        "mail": "Mail",
+        "preferences": "Preferanser",
+        "allergies": "Allergier"
+    }
   }
 }
