--- a/public/locales/nb/layout.json
+++ b/public/locales/nb/layout.json
@@ -2,7 +2,8 @@
   "nav": {
     "about": "OM OSS",
     "events": "ARRANGEMENTER",
-    "companies": "FOR BEDRIFTER"
+    "companies": "FOR BEDRIFTER",
+    "verv": "VERV"
   },
   "footer": {
     "sponsor": "Hovedsamarbeidspartner",
