--- a/public/locales/en/aboutPage.json
+++ b/public/locales/en/aboutPage.json
@@ -75,6 +75,18 @@
       "honorary-member": "Honorary member",
       "bylaws": "Bylaws"
     }
+  },
+  "form": {
+    "button": "Join event",
+    "full": "This event is full!",
+    "send": "Send",
+    "sent": "You have signed up for this event.",
+    "cancel": "Cancel signup",
+    "name": "Name",
+    "degree": "Degree",
+    "study_year": "Study year",
+    "mail": "Mail",
+    "preferences": "Preferences",
+    "allergies": "Allergies"
   }
-
 }
