--- a/public/locales/nb/aboutPage.json
+++ b/public/locales/nb/aboutPage.json
@@ -75,5 +75,18 @@
       "honorary-member": "Æresmedlem",
       "bylaws": "Vedtekter"
     }
-  }
+  },
+  "form": {
+    "button": "Meld meg på",
+    "full": "Dette arrangementet er fullt!",
+    "send": "Send",
+    "sent": "Du er påmeldt.",
+    "cancel": "Meld meg av",
+    "name": "Navn",
+    "degree": "Studieretning",
+    "study_year": "Studieår",
+    "mail": "Mail",
+    "preferences": "Preferanser",
+    "allergies": "Allergier"
+}
 }
