--- a/public/locales/nb/vervPage.json
+++ b/public/locales/nb/vervPage.json
@@ -40,7 +40,7 @@
       "intro": "Foreningen er satt sammen av et hovedstyret og en rekke komiteer.",
       "board": {
         "title": "Styret",
-        "body": "Øverste leddet i foreningen er styret. Under årsmøtet blir leder, nestleder og sekretær stemt frem, og disse sitter sammen med lederene fra de ulike komiteene i styret. Sammen er disse ansvarlige for å drive foreningen, styre økonomien og sørge for at alle utfører de oppgavene de skal.",
+        "body": "Styret er det øverste leddet i Login. Styret består av leder, nestleder, sekretær og komitélederne. Det er kun mulig å stille til styreverv under <a class='standard-link standard-link--underscore-hover' href=\"https://wiki.login.no/public/docs/annualmeeting\\\" target=\"_blank\" rel=\"noreferrer\">årsmøte</a>.",
         "leader": "Leder",
         "deputyChairman": "Nestleder",
         "secretary": "Sekretær",
@@ -51,41 +51,34 @@
         "satkom": "SATkom leder"
       },
       "eventkom": {
-        "title": "EventKom",
-        "intro": "EventKom er Logins party-komité hvor målet er å bruke opp alle inntektene PR sørger for.",
-        "body": "EventKom har ansvar for å stelle i stand sosiale arrangement på vegne av Login gjennom semesteret. Vi tilbyr sammenkomster der studenter kan møtes på tvers av studieprogram, år og klasser for å få et avbrekk fra studiehverdagen. Målet til EventKom er å bygge et sterkt fellesskap blant IT-studentene ved skolen, som du kan lene deg på når studiehverdagen tar på. Dersom du har forslag til aktiviteter, eller ønsker å være med i komiteen er det bare å kontakte oss på <a class='standard-link standard-link--underscore-hover' href=\"https://discord.gg/login-ntnu\\\" target=\"_blank\" rel=\"noreferrer\"> Discord</a>. Forslag og tilbakemeldinger tas imot med glede, og vi håper å høre fra deg."
+        "title": "EvntKom",
+        "intro": "EvntKom er ansvarlig for Login sine arrangementer.",
+        "body": "Med verv i EvntKom vil man være svært synlig i foreningen. Man hjelper til å arrangere og får være med på arrangementene til Login. Dette er komitéen for deg som liker å ha ansvar, men samtidig være sosial og finne på ting."
       },
       "tekkom": {
         "title": "TekKom",
-        "intro": "TekKom påstår at de jobber med denne nettsiden men hovedsaklig spiser de pizza. Dette er komiteen for de som liker å lære tekniske ting som å progge og drifte høyteknologisk infrastruktur.",
-        "body": "TekKom har ansvaret for infrastrukturen til Login. Våre oppgaver innebærer utvikling og vedlikehold av blant annet nettsidene og tjenestene foreningen avhenger av, i tillegg til andre sideprosjekter. Vi organiserer åpne arbeidskvelder med pizza hver uke der vi jobber med TekKom-prosjekter. Her stiller vi ingen forventninger annet enn at man er nysgjerrig og forøker å bidra med det man kan. Hvis du liker å kode, eller bare har et vilt prosjekt i tankene, så er dette komiteen for deg!"
+        "intro": "TekKom utvikler Login sin infrastruktur.",
+        "body": "Dette er et veldig åpent verv, og det er både mulig å bidra på eksisterende prosjekter, som denne nettsiden og Login appen, eller begynne på helt nye prosjekter. Vi trenger både flinke utviklere, og flinke designere."
       },
       "pr": {
         "title": "PR",
-        "intro": "PR er Logins gyldene ku og uten dem hadde ikke pengene strømmet inn og ingen av de andre komiteene kunne drevet med sprell!",
-        "body": "PR er Logins ansikt utad og har ansvar for Logins offentlige mediakanaler. PR følger med på vårt ticketsystem og svarer bedriftskontakter. De jobber også for å gi studenter et innsyn og vei inn i næringslivet ved å arrangere bedpreser, workshops/fagpres og karrieredager, som også er Logins hovedinntektskilde! Videre er PR med på å representere Login på events og bistår også med rekruttering av nye medlemmer."
+        "intro": "PR er Logins ansikt utad og har ansvar for Logins offentlige mediekanaler",
+        "body": "Med verv i PR vil du være med på å kommunisere med både studentene våre og bedriftene våre. PR promoterer arrangementer og andre ting som angår Login i sosiale medier. PR bistår også med rekruttering. Enten du er flink til å ta bilder, eller vil bli en Logfluencer er dette komitéen for deg."
       },
       "ctfkom": {
         "title": "CTFkom",
-        "intro": "CTFkom er Logins hacker-komité. Deres viktigste oppdrag er å hacke seg inn på ING:α sin infrastruktur og lage sprell der!",
-        "body": "CTFKom er komiteen som stiller i stand CTF arrangementer på campus. De arbeider for at alle IT- studentene ved skolen skal kunne utvikle sine ferdigheter gjennom Capture The Flag konkurranser. Annenhver uke samles de på skolen for å løse oppgaver sammen, og tilbyr en arena der studenter fra ulike studieprogram, år og klasser kan treffes og ha det gøy sammen. Utover dette er vi aktive på Discord, og sørger for at du alltid kan holde deg oppdatert på nye og interessante CTFer. I CTFkom er ingen spørsmål for dumme og dersom du sitter fast i en CTF, eller bare lurer på noe er det bare å sende en melding i kanalen på <a class='standard-link standard-link--underscore-hover' href=\"https://discord.gg/login-ntnu\\\" target=\"_blank\" rel=\"noreferrer\"> Discord</a>."
+        "intro": "CTFkom er Logins hacker-komité",
+        "body": "CTFKom er komiteen som stiller i stand CTF arrangementer på campus. Deres viktigste oppdrag er å hacke seg inn på ING:α sin infrastruktur og lage sprell der! Med verv i CTFkom vil man både være med på å utvikle CTF oppgaver, og arrangere bedrift CTFer. Her arbeider man for at alle IT- studentene ved skolen skal kunne utvikle sine ferdigheter gjennom Capture The Flag konkurranser. Annenhver uke bidrar man til å holde Login CTFer. Mange av CTFkom sine medlemmer er også aktive i online CTF konkurranser, og er en unik mulighet til å utvikle nye CTF egenskaper, samtidig som man får kontakt med mange interessante bedrifter."
       },
       "satkom":{
         "title": "SATkom",
-        "intro": "<abbr title=\"Systematiserte Automatiserte Transaksjoner\">SATkom</abbr> er komiteen som vokter Login sin pengebinge, og sørger for at pengene både flyter inn og ut. Hvis du har økonomisk sans, eller bare vil bli Login's nye sugar daddy, så er dette komiteen for deg!",
-        "body": "SATkom står for Sytematiserte Automatiserte Transaksjoner, og de jobber med å forvalte midlene Login har tilgengelig. Deres oppgaver innebærer betaling av regninger, utsending av fakturaer og innkjøp til foreningen. De lager ukentlige regnskap, og passer på at komiteene ikke overskrider budsjettene for mye. Komiteen har også en 'Dungeon Master' som har i oppgave å passe på Loungen, og at alle medlemmene våre får nok koffein. Videre er komiteen involvert i budsjettering, diverse økonomiske saker og andre ablegøyer."
+        "intro": "<abbr title=\"Systematiserte Automatiserte Transaksjoner\">SATkom</abbr> er komiteen som vokter Login sin pengebinge, og sørger for at pengene både flyter inn og ut. Enten du har økonomisk sans, eller bare vil bli Login's nye sugar daddy, så er dette komiteen for deg!",
+        "body": "Med verv i SATkom hjelper man til med å forvalte midlene Login har tilgjengelig, og unngår at SATkom sin leder blir tatt av skatteetaten. SATkom lager ukentlige regnskap, og passer på at komiteene ikke overskrider budsjettene for mye. Komiteen har også en 'Dungeon Master' som har i oppgave å passe på Loungen, og at alle medlemmene våre får nok koffein. Videre er komiteen involvert i budsjettering, diverse økonomiske saker og andre ablegøyer."
       }
     },
-    "publicDocs": {
+    "apply": {
       "title": "Søk verv",
-      "body": "Komitéene tar fortløpende imot søknader <a class='standard-link standard-link--underscore-hover' href='https://redmine.login.no/projects/wiki/wiki'>her</a>. Dersom du har flere spørsmål om verv i en spesifikk komité eller er usikker på hvordan du kan bidra, kan du ta kontakt med den respektive komitelederen. For generelle henvendelser kan du ta kontakt med rekrutteringsansvarlig via <a class='standard-link standard-link--underscore-hover' href='https://redmine.login.no/projects/wiki/wiki'>Discord</a>, eller sende oss en <a class='standard-link standard-link--underscore-hover' href='mailto:kontakt@login.no'>mail</a>.",
-      "bulletPoints": {
-        "agendas": "Agenda",
-        "minutes": "Referat",
-        "budgets": "Budsjett",
-        "honorary-member": "Æresmedlem",
-        "bylaws": "Vedtekter"
-      }
+      "body": "Komitéene tar fortløpende imot søknader <a class='standard-link standard-link--underscore-hover' href='https://redmine.login.no/projects/wiki/wiki'>her</a>. Dersom du har flere spørsmål om verv i en spesifikk komité eller er usikker på hvordan du kan bidra, kan du ta kontakt med den respektive komitelederen. For generelle henvendelser kan du ta kontakt med rekrutteringsansvarlig via <a class='standard-link standard-link--underscore-hover' href='https://redmine.login.no/projects/wiki/wiki'>Discord</a>, eller sende oss en <a class='standard-link standard-link--underscore-hover' href='mailto:kontakt@login.no'>mail</a>."
     }
   }
   
