Completed verv page

--- a/public/locales/nb/vervPage.json
+++ b/public/locales/nb/vervPage.json
@@ -12,7 +12,7 @@
         },
         "3": {
             "title": "Nucleus launch party",
-            "description": "Simon, tidligere nestleder av TekKom, sammen med flere av TekKom medlemmene på launch party av Logins app."
+            "description": "Simon, tidligere leder av TekKom, sammen med flere av TekKom medlemmene på launch party av Logins app."
         },
         "4": {
             "title": "CTF",
