--- a/public/locales/en/vervPage.json
+++ b/public/locales/en/vervPage.json
@@ -1,75 +1,107 @@
 {
-    "title": "Who are we?",
-    "intro": "Login is the student association for IT at <i class='logfont-ntnu'></i> NTNU in Gjøvik and everyone who studies the following courses is automatically a member of the association.",
-    "bachelor": {
-      "computerEngineer": "Computer engineering",
-      "digsec": "Digital infrastructure and cyber security",
-      "prog": "Programming"
-    },
-    "master": {
-      "infosec": "Information security",
-      "applied": "Applied computer science",
-      "colorimg": "Computational colour and spectral imaging"
-    },
-    "phd": {
-      "infosec": "Information security and communication technology",
-      "data": "Computer technology and informatics",
-      "tele": "Electronics and telecommunications"
-    },
-    "about": {
-      "title": "By students, for students",
-      "intro": "The association is run by volunteer students who work to ensure that you get the most out of your studies at <i class='logfont-ntnu'></i> NTNU.",
-      "body": {
-        "p1": "We regularly organize social events and company presentations. We keep in touch with relevant companies and invite you to, among other things, the cyber days once a semester so that you, as a student, get to know the opportunities your education gives you.",
-        "p2": "Every week we gather students for <i class='logfont-tekkom'></i> TekKom and <i class='logfont-ctf-filled'></i> CTF gatherings, where you can learn new things or contribute to the association. Here you can meet other students who share the joy of learning and putting the knowledge you acquire into practice. <i class='logfont-eventkom-filled'></i> EvntKom is also constantly working on new and exciting events such as movie nights and winter ball."
-      }
+    "title": "Verv",
+    "intro": "Verv is a voluntary position for those with an extra passion or desire to make a change for the better in Login. Verv gives extra responsibility, meaning more effort is required. Consecutively it creates opportunities to establish new relationships, for example by participating in our intern events.",
+    "imageCarousel": {
+        "1": {
+            "title": "Anders, previous leader of Login",
+            "description": "Anders performing a color test."
+        },
+        "2": {
+            "title": "Stand from Catch IDI",
+            "description": "Pepper together with some of Logins master students."
+        },
+        "3": {
+            "title": "Nucleus launch party",
+            "description": "Simon, previous leader of TekKom, together with several TekKom members at the launch party of the Login app."
+        },
+        "4": {
+            "title": "CTF",
+            "description": "CTFkom during a CTF."
+        },
+        "5": {
+            "title": "CTF",
+            "description": "The participants get their skills put to the test during Logins CTFs."
+        },
+        "6": {
+            "title": "Christmas party",
+            "description": "Good vibes at Logins christmas party."
+        },
+        "7": {
+            "title": "Cabin trip",
+            "description": "Evntkom hosted a cabin trip. This was a great success."
+        },
+        "8": {
+            "title": "Grilling at the cabin trip",
+            "description": "Good memories from grilling at the cabin trip."
+        },
+        "9": {
+            "title": "EvntKom at Bowling",
+            "description": "EvntKom went bowling."
+        },
+        "10": {
+            "title": "Poker night",
+            "description": "Some were left richer than others when Login hosted a poker night. At least there was good vibes all night."
+        },
+        "11": {
+            "title": "Login at Bedpres",
+            "description": "About every week throughout the enitre semester Login hosts company presentations. These are very popular amongst the students, but would not be possible without some zealots."
+        },
+        "12": {
+            "title": "Access control to Bedpres",
+            "description": "Wiktor and Mads controlling that everyone who shows up have registered."
+        },
+        "13": {
+            "title": "PR playing table tennis",
+            "description": "Several of the members of PR playing table tennis."
+        },
+        "14": {
+            "title": "VR Event",
+            "description": "Login hosting a VR event. Here many students got their senses put to the test."
+        },
+        "15": {
+            "title": "PR going to town",
+            "description": "Login spreading good vibes in town!"
+        }
     },
     "committeeSection": {
-          "title": "The board and the committees",
-          "intro": "The association is made up of a main board and a number of committees.",
-          "board": {
-          "title": "Board",
-          "body": "The highest level of the association is the board. The board consists of a chairman, deputy chairman, secretary, and committee leaders. You can only run for verv during our <a class='standard-link standard-link--underscore-hover' href=\"https://wiki.login.no/public/docs/annualmeeting\\\" target=\"_blank\" rel=\"noreferrer\">annual meetings</a>.",
-          "leader": "Chairman",
-          "deputyChairman": "Deputy chairman",
-          "secretary": "Secretary",
-          "eventkom": "EvntKom leader",
-          "pr": "PR leader",
-          "tekkom": "TekKom leader",
-          "ctfkom": "CTF leader",
-          "satkom": "SATkom leader"
-        },
+        "title": "What do you do with verv?",
+        "intro": "Login consists of 5 committees with different tasks. Below you will find a short description of each committee and their typical tasks.",
+        "board": {
+            "eventkom": "EventKom leader",
+            "pr": "PR leader",
+            "tekkom": "TekKom leader",
+            "ctfkom": "CTF leader",
+            "satkom": "SATkom leader"
+          },
         "eventkom": {
-          "title": "EvntKom",
-          "intro": "EvntKom are responsible for Logins events.",
-          "body": "With verv in EvntKom you will be extremely visible to our students. You help with hosting all of our events. This is the committee for you if you would like to have responsibility, but still be social and active."
+            "title": "Evntkom",
+            "intro": "Evntkom are responsible for Logins events.",
+            "body": "With verv in Evntkom you will be very visible on campus. You help host, and get to join the events of Login. This is the committee for you if you like to be responsible, but at the same time be social and try new things."
         },
         "tekkom": {
-          "title": "TekKom",
-          "intro": "TekKom develops Logins infrastructure.",
-          "body": "This is a very open verv. You can help on existing projects like our website and app, or start new ones. We are both looking for developers and designers."
+            "title": "TekKom",
+            "intro": "TekKom develops the infrastructure of Login.",
+            "body": "This is a very open verv where you can help with existing projects like this website or the Login app, or start your own. We both need experienced developers, and designers."
         },
         "pr": {
-          "title": "PR",
-          "intro": "PR is Logins face to the outside. They are responsible for all of our social media.",
-          "body": "With verv in PR you will help communicate both with our students and companies. PR promotes events and other things that regard Login and our students in social media. PR also helps with recruitment. Whether you would like to take pictures, or be our next Logfluencer, this is the committee for you!"
+            "title": "PR",
+            "intro": "PR is the face of Login, and they are responsible for our social media.",
+            "body": "With verv in PR you will help communicate both with our students, and our companies. PR promotes events and other topics related to Login in social media. PR also helps with recruitment. Wether you are a good photographer, or just wants to be our next Logfluencer, this is the committee for you."
         },
         "ctfkom": {
-          "title": "CTFkom",
-          "intro": "CTFkom is Logins hacker-committee",
-          "body": "CTFKom is the committee that hosts Login CTFs on campus. Their most important task is to hack ING:α, and have fun there. With verv in CTFkom you will both help develop CTF challenges, and host company CTFs. Here you will help all students of Login to enhance their CTF skills by developing challenging CTF tasks. Every other week Login hosts a CTF. CTFkom also likes to participate in international challenges, so this will be an excellent opportunity to enhance your own CTF skills, at the same time as you get to speak with the most security oriented companies."
+            "title": "CTFkom",
+            "intro": "CTFkom is Logins hacker-committee",
+            "body": "CTFKom is the committee hosting Logins CTF events on campus. Their main task is hacking ING:a and creating a mess there! With verv in CTFkom you will both develop CTF tasks, and host company CTFs. Here you work to improve all of our students skills through Capture The Flag competitions. Every other week you will help host CTFs. Many of CTFkoms members are also active in international CTF competitions, which is an excellent opportunity to develop both new skills, and new relationships at the same time as you get in contact with many interesting companies."
         },
         "satkom":{
-          "title": "SATkom",
-          "intro": "<abbr title=\"Systematic Automatic Transactions\">SATkom</abbr> is the committee guarding Logins money vault, making sure the money flows both in and out. Whether you have a financial sense or would like to be Login's new sugar daddy, this is the committe for you!",
-          "body": "With verv in SATkom you will help distribute the funds we have available, making sure SATkoms leader is not taken by the tax authorities. SATkom creates weekly budgets, and makes sure no committeeleader exceeds their budget too much. The committee also has a 'Dungeon Master' which is responsible for the Login Lounge, and making sure every member gets enough coffeine. Furthermore the committee is involved in budgeting, financial matters and other able-goers."
+            "title": "SATkom",
+            "intro": "<abbr title=\"Systematic Automated Transactions\">SATkom</abbr> is the committee guarding Logins money bin, making sure the money flows both in, and out. Wether you have an economical eye, or just desires to become Logins next sugar daddy, this is the committee for you!",
+            "body": "With verv in SATkom, you help manage the funds Login disposes, making sure we stay clear of the IRS. SATkom makes weekly budgets, and makes sure none of the committees go too much above budget. The committee also has a 'Dungeon Master' whose task is to watch over the Login Lounge, and make sure all of our members get enough caffeine. Furthermore the committee is involved with budgeting, various financial matters, and other able-goers."
         }
-      },
-      "apply": {
+    },
+    "apply": {
         "title": "Apply for verv",
-        "body": "The committees are continuously accepting new members. For further questions regarding a specific committee please contact the respective committee leader. For general inquiries, please speak to our <a class='standard-link standard-link--underscore-hover' href='https://redmine.login.no/projects/wiki/wiki'>recruitment officer</a>, or send us a <a class='standard-link standard-link--underscore-hover' href='mailto:kontakt@login.no'>mail</a>.",
-        "action": "Apply"
-      }
-  
+        "body": "The committees are continuously accepting applications below. For further questions or if you have not been convinced yet, please reach out to the respective committee leader. For general inquiries you may reach our recruitment manager via <a class='standard-link standard-link--underscore-hover' href='https://discordapp.com/users/877108421772582962'>Discord</a>, or send us a <a class='standard-link standard-link--underscore-hover' href='mailto:kontakt@login.no'>mail</a>.",
+        "action": "Apply for verv"
+    }
   }
-  
