--- a/public/locales/nb/layout.json
+++ b/public/locales/nb/layout.json
@@ -7,7 +7,7 @@
   },
   "footer": {
     "sponsor": "Hovedsamarbeidspartner",
-    "msg": "Nettsiden er i BETA. Endringer skjer fortløpende. Dette medfører at ting ikke alltid fungerer som de skal. Skulle du snuble over en feil så setter vi pris på en <a href='mailto:kontakt@login.no'>epost</a>",
+    "msg": "Nettsiden utvikles aktivt. Dette medfører at feil kan oppstå. Skulle du snuble over en feil så setter vi pris på en <a href='mailto:kontakt@login.no'>epost</a>.",
     "copy": "Opphavsrett &copy; 2023 Login - Linjeforeningen for IT, NO 811 940 372"
   }
 }
