Resolve "Job ads"

--- a/public/locales/en/landingPage.json
+++ b/public/locales/en/landingPage.json
@@ -1,6 +1,6 @@
 {
   "landing": {
-    "readMore":"Read more",
+    "readMore":"Learn more",
     "welcome": "Welcome to",
     "whoAreWe": {
       "title": "Who are we?",
