--- a/public/locales/nb/eventPage.json
+++ b/public/locales/nb/eventPage.json
@@ -6,6 +6,8 @@
     "type": "Kategori",
     "organizer": "Arrangør",
     "links": "Lenker",
+    "stream": "Stream",
+    "capacity": "Plasser",
     "form": {
         "button": "Meld meg på",
         "full": "Dette arrangementet er fullt!",
@@ -19,5 +21,11 @@
         "preferences": "Preferanser",
         "allergies": "Allergier"
     }
+  }, 
+  "signup": {
+    "signup": "Påmelding",
+    "signup-open": "Påmelding åpner",
+    "signup-closed": "Påmelding stengt",
+    "no-signup": "Dette arrangementet krever ingen påmelding"
   }
 }
