json lang file updates

--- a/public/locales/en/eventListPage.json
+++ b/public/locales/en/eventListPage.json
@@ -1,6 +1,8 @@
 {
   "title": "Events",
   "noEvents": "No upcoming events",
+  "new": "NEW",
+  "highlight": "HIGHLIGHTED",
   "filter": {
     "title": "filter",
     "searchHint": "Search...",
