--- a/public/locales/en/eventPage.json
+++ b/public/locales/en/eventPage.json
@@ -26,6 +26,8 @@
     "signup": "Sign up",
     "signup-open": "Sign up opens",
     "signup-closed": "Sign up closed",
-    "no-signup": "This event reqiers no sign up"
-  }
+    "no-signup": "This event reqiers no sign up",
+    "signup-full": "This event is full!"
+  },
+  "published" : "PUBLISHED"
 }
