improved tags, added canceled tag for events

--- a/public/locales/en/eventListPage.json
+++ b/public/locales/en/eventListPage.json
@@ -3,6 +3,7 @@
   "noEvents": "No upcoming events",
   "new": "NEW",
   "highlight": "HIGHLIGHTED",
+  "canceled": "CANCELED",
   "filter": {
     "title": "filter",
     "searchHint": "Search...",
