--- a/public/locales/nb/eventListPage.json
+++ b/public/locales/nb/eventListPage.json
@@ -3,6 +3,7 @@
   "noEvents": "Ingen kommene arrangementer",
   "new": "NY",
   "highlight": "FREMHEVET",
+  "canceled": "AVLYST",
   "filter": {
     "title": "filter",
     "searchHint": "Søk...",
