Lagt til Intro til PR, både på en og nb

--- a/public/locales/en/aboutPage.json
+++ b/public/locales/en/aboutPage.json
@@ -67,7 +67,7 @@
     },
     "pr":{
       "title": "PR",
-      "intro": "they didn't give me a intro to put here...",
+      "intro": "PR documents and publishes everything that happens in Login. Keep an eye on our channels, maybe you see yourself!",
       "body": "PR is Login's graphic committee and is responsible for managing Login's public media channels. PR produces all the necessary graphic materials to promote the student organization and all our events, and designs all the merch and graphic content for random projects that arise. PR also provides a photographer for every event to document Login's history as it happens"
     }
   },
