--- a/public/locales/nb/aboutPage.json
+++ b/public/locales/nb/aboutPage.json
@@ -67,7 +67,7 @@
     },
     "pr":{
       "title": "PR",
-      "intro": "de gav meg ikke noen intro å putte her...",
+      "intro": "PR dokumenterer og publiserer alt som skjer i foreningen. Hold et øye med våre kanaler, kanskje du ser deg selv!",
       "body": "PR er Logins grafiske komité og har ansvar for å drifte Logins offentlige mediakanaler. PR lager det som trengs av grafisk materiale for å kunne promotere linjeforeningen og alle våre arrangementer, samt designer de alt av merch og grafisk innhold til randome prosjekter som kommer opp. PR stiller også opp med fotograf på samtlige arrangementer for å dokumentere historien til Login, mens den skjer!"
     }
   },
