--- a/public/locales/nb/jobadPage.json
+++ b/public/locales/nb/jobadPage.json
@@ -5,6 +5,7 @@
         "type" : "Type",
         "location" : "Sted",
         "locations" : "Steder",
+        "skills" : "Ferdigheter",
         "apply-btn" : "Søk her"
     },
     "published" : "PUBLISERT"
